fix(images): fix rendering images on mobile

--- a/src/posts/components/post/post.module.scss
+++ b/src/posts/components/post/post.module.scss
@@ -4,5 +4,9 @@
 
 .image {
   display: block;
+  width: 100%;
   margin: 1rem auto;
+  @media (width >= 500px) {
+    width: initial;
+  }
 }
